syntax = "proto3";
package storage_server;

message RegisterRequest {
  string id = 1;
}

message RegisterReply {
  bool confirmed = 1;
}

service StorageService {
  rpc Register (RegisterRequest) returns (RegisterReply);
}